--- a/index.html
+++ b/index.html
@@ -86,11 +86,15 @@
     <div class="row cols-2" style="margin-top:16px">
       <div class="card">
         <h2>3) A — traits</h2>
-        <div id="slidersA"></div>
+        <div id="slidersA"></div> <div id="a_map" style="margin-top:10px; text-align:center;">
+  <img id="a_map_img" src="" alt="Country A map" style="max-width:150px;">
+</div>
       </div>
       <div class="card">
         <h2>4) B — traits</h2>
-        <div id="slidersB"></div>
+        <div id="slidersB"></div> <div id="b_map" style="margin-top:10px; text-align:center;">
+  <img id="b_map_img" src="" alt="Country B map" style="max-width:150px;">
+</div>
       </div>
     </div>
 
@@ -232,6 +236,9 @@
 
     function run(){
       A.name = byId("a_name").value; B.name = byId("b_name").value;
+      loadMapImage(A.name, "a_map_img");
+loadMapImage(B.name, "b_map_img");
+
       A.ethicalType = byId("a_eth").value; B.ethicalType = byId("b_eth").value;
 
       const res = compute(A,B);
@@ -278,6 +285,144 @@
       a.href = url; a.download = "reflexive_result.json";
       a.click(); URL.revokeObjectURL(url);
     }
+// Minimalist map loader with all ISO country codes
+function loadMapImage(name, targetId) {
+  const mapping = {
+    "Afghanistan": "af",
+    "Albania": "al",
+    "Algeria": "dz",
+    "Andorra": "ad",
+    "Angola": "ao",
+    "Argentina": "ar",
+    "Armenia": "am",
+    "Australia": "au",
+    "Austria": "at",
+    "Azerbaijan": "az",
+    "Bahamas": "bs",
+    "Bahrain": "bh",
+    "Bangladesh": "bd",
+    "Belarus": "by",
+    "Belgium": "be",
+    "Belize": "bz",
+    "Benin": "bj",
+    "Bhutan": "bt",
+    "Bolivia": "bo",
+    "Bosnia and Herzegovina": "ba",
+    "Botswana": "bw",
+    "Brazil": "br",
+    "Bulgaria": "bg",
+    "Cambodia": "kh",
+    "Cameroon": "cm",
+    "Canada": "ca",
+    "Chile": "cl",
+    "China": "cn",
+    "Colombia": "co",
+    "Costa Rica": "cr",
+    "Croatia": "hr",
+    "Cuba": "cu",
+    "Cyprus": "cy",
+    "Czechia": "cz",
+    "Denmark": "dk",
+    "Dominican Republic": "do",
+    "Ecuador": "ec",
+    "Egypt": "eg",
+    "Estonia": "ee",
+    "Ethiopia": "et",
+    "Finland": "fi",
+    "France": "fr",
+    "Georgia": "ge",
+    "Germany": "de",
+    "Greece": "gr",
+    "Hungary": "hu",
+    "Iceland": "is",
+    "India": "in",
+    "Indonesia": "id",
+    "Iran": "ir",
+    "Iraq": "iq",
+    "Ireland": "ie",
+    "Israel": "il",
+    "Italy": "it",
+    "Japan": "jp",
+    "Jordan": "jo",
+    "Kazakhstan": "kz",
+    "Kenya": "ke",
+    "Kuwait": "kw",
+    "Kyrgyzstan": "kg",
+    "Latvia": "lv",
+    "Lebanon": "lb",
+    "Libya": "ly",
+    "Lithuania": "lt",
+    "Luxembourg": "lu",
+    "Madagascar": "mg",
+    "Malaysia": "my",
+    "Maldives": "mv",
+    "Mali": "ml",
+    "Malta": "mt",
+    "Mexico": "mx",
+    "Moldova": "md",
+    "Monaco": "mc",
+    "Mongolia": "mn",
+    "Montenegro": "me",
+    "Morocco": "ma",
+    "Mozambique": "mz",
+    "Myanmar": "mm",
+    "Nepal": "np",
+    "Netherlands": "nl",
+    "New Zealand": "nz",
+    "Nigeria": "ng",
+    "North Korea": "kp",
+    "North Macedonia": "mk",
+    "Norway": "no",
+    "Pakistan": "pk",
+    "Palestine": "ps",
+    "Panama": "pa",
+    "Paraguay": "py",
+    "Peru": "pe",
+    "Philippines": "ph",
+    "Poland": "pl",
+    "Portugal": "pt",
+    "Qatar": "qa",
+    "Romania": "ro",
+    "Russia": "ru",
+    "Saudi Arabia": "sa",
+    "Senegal": "sn",
+    "Serbia": "rs",
+    "Singapore": "sg",
+    "Slovakia": "sk",
+    "Slovenia": "si",
+    "South Africa": "za",
+    "South Korea": "kr",
+    "Spain": "es",
+    "Sri Lanka": "lk",
+    "Sudan": "sd",
+    "Sweden": "se",
+    "Switzerland": "ch",
+    "Syria": "sy",
+    "Tajikistan": "tj",
+    "Tanzania": "tz",
+    "Thailand": "th",
+    "Tunisia": "tn",
+    "Turkey": "tr",
+    "Turkmenistan": "tm",
+    "Ukraine": "ua",
+    "United Arab Emirates": "ae",
+    "United Kingdom": "gb",
+    "United States": "us",
+    "Uruguay": "uy",
+    "Uzbekistan": "uz",
+    "Venezuela": "ve",
+    "Vietnam": "vn",
+    "Yemen": "ye",
+    "Zimbabwe": "zw"
+  };
+
+  const code = mapping[name];
+  if (code) {
+    byId(targetId).src = `https://flagcdn.com/${code}.svg`;
+  } else {
+    byId(targetId).src = "";
+  }
+}
 
     // init UI
     mkSliders("slidersA", A);
