--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
     <div class="row cols-2" style="margin-top:16px">
       <div class="card">
         <h2>3) A — traits</h2>
-        <div id="slidersA"></div> <div id="a_map" style="margin-top:10px; text-align:center;">
+        <div id="slidersA"></div> 
+        <div id="a_map" style="margin-top:10px; text-align:center;">
   <img id="a_map_img" src="" alt="Country A map" style="max-width:150px;">
 </div>
       </div>
       <div class="card">
         <h2>4) B — traits</h2>
-        <div id="slidersB"></div> <div id="b_map" style="margin-top:10px; text-align:center;">
+        <div id="slidersB"></div> 
+        <div id="b_map" style="margin-top:10px; text-align:center;">
   <img id="b_map_img" src="" alt="Country B map" style="max-width:150px;">
 </div>
       </div>
