--- a/index.html
+++ b/index.html
@@ -288,135 +288,153 @@ loadMapImage(B.name, "b_map_img");
       a.click(); URL.revokeObjectURL(url);
     }
 // Minimalist map loader with all ISO country codes
+// Minimalist map loader with ISO country codes (case-insensitive + aliases)
 function loadMapImage(name, targetId) {
+  if (!name) return;
+  const input = name.trim().toLowerCase();
+
   const mapping = {
-    "Afghanistan": "af",
-    "Albania": "al",
-    "Algeria": "dz",
-    "Andorra": "ad",
-    "Angola": "ao",
-    "Argentina": "ar",
-    "Armenia": "am",
-    "Australia": "au",
-    "Austria": "at",
-    "Azerbaijan": "az",
-    "Bahamas": "bs",
-    "Bahrain": "bh",
-    "Bangladesh": "bd",
-    "Belarus": "by",
-    "Belgium": "be",
-    "Belize": "bz",
-    "Benin": "bj",
-    "Bhutan": "bt",
-    "Bolivia": "bo",
-    "Bosnia and Herzegovina": "ba",
-    "Botswana": "bw",
-    "Brazil": "br",
-    "Bulgaria": "bg",
-    "Cambodia": "kh",
-    "Cameroon": "cm",
-    "Canada": "ca",
-    "Chile": "cl",
-    "China": "cn",
-    "Colombia": "co",
-    "Costa Rica": "cr",
-    "Croatia": "hr",
-    "Cuba": "cu",
-    "Cyprus": "cy",
-    "Czechia": "cz",
-    "Denmark": "dk",
-    "Dominican Republic": "do",
-    "Ecuador": "ec",
-    "Egypt": "eg",
-    "Estonia": "ee",
-    "Ethiopia": "et",
-    "Finland": "fi",
-    "France": "fr",
-    "Georgia": "ge",
-    "Germany": "de",
-    "Greece": "gr",
-    "Hungary": "hu",
-    "Iceland": "is",
-    "India": "in",
-    "Indonesia": "id",
-    "Iran": "ir",
-    "Iraq": "iq",
-    "Ireland": "ie",
-    "Israel": "il",
-    "Italy": "it",
-    "Japan": "jp",
-    "Jordan": "jo",
-    "Kazakhstan": "kz",
-    "Kenya": "ke",
-    "Kuwait": "kw",
-    "Kyrgyzstan": "kg",
-    "Latvia": "lv",
-    "Lebanon": "lb",
-    "Libya": "ly",
-    "Lithuania": "lt",
-    "Luxembourg": "lu",
-    "Madagascar": "mg",
-    "Malaysia": "my",
-    "Maldives": "mv",
-    "Mali": "ml",
-    "Malta": "mt",
-    "Mexico": "mx",
-    "Moldova": "md",
-    "Monaco": "mc",
-    "Mongolia": "mn",
-    "Montenegro": "me",
-    "Morocco": "ma",
-    "Mozambique": "mz",
-    "Myanmar": "mm",
-    "Nepal": "np",
-    "Netherlands": "nl",
-    "New Zealand": "nz",
-    "Nigeria": "ng",
-    "North Korea": "kp",
-    "North Macedonia": "mk",
-    "Norway": "no",
-    "Pakistan": "pk",
-    "Palestine": "ps",
-    "Panama": "pa",
-    "Paraguay": "py",
-    "Peru": "pe",
-    "Philippines": "ph",
-    "Poland": "pl",
-    "Portugal": "pt",
-    "Qatar": "qa",
-    "Romania": "ro",
-    "Russia": "ru",
-    "Saudi Arabia": "sa",
-    "Senegal": "sn",
-    "Serbia": "rs",
-    "Singapore": "sg",
-    "Slovakia": "sk",
-    "Slovenia": "si",
-    "South Africa": "za",
-    "South Korea": "kr",
-    "Spain": "es",
-    "Sri Lanka": "lk",
-    "Sudan": "sd",
-    "Sweden": "se",
-    "Switzerland": "ch",
-    "Syria": "sy",
-    "Tajikistan": "tj",
-    "Tanzania": "tz",
-    "Thailand": "th",
-    "Tunisia": "tn",
-    "Turkey": "tr",
-    "Turkmenistan": "tm",
-    "Ukraine": "ua",
-    "United Arab Emirates": "ae",
-    "United Kingdom": "gb",
-    "United States": "us",
-    "Uruguay": "uy",
-    "Uzbekistan": "uz",
-    "Venezuela": "ve",
-    "Vietnam": "vn",
-    "Yemen": "ye",
-    "Zimbabwe": "zw"
+    "afghanistan": "af",
+    "albania": "al",
+    "algeria": "dz",
+    "andorra": "ad",
+    "angola": "ao",
+    "argentina": "ar",
+    "armenia": "am",
+    "australia": "au",
+    "austria": "at",
+    "azerbaijan": "az",
+    "bahamas": "bs",
+    "bahrain": "bh",
+    "bangladesh": "bd",
+    "belarus": "by",
+    "belgium": "be",
+    "belize": "bz",
+    "benin": "bj",
+    "bhutan": "bt",
+    "bolivia": "bo",
+    "bosnia and herzegovina": "ba",
+    "botswana": "bw",
+    "brazil": "br",
+    "bulgaria": "bg",
+    "cambodia": "kh",
+    "cameroon": "cm",
+    "canada": "ca",
+    "chile": "cl",
+    "china": "cn",
+    "colombia": "co",
+    "costa rica": "cr",
+    "croatia": "hr",
+    "cuba": "cu",
+    "cyprus": "cy",
+    "czechia": "cz",
+    "czech republic": "cz",
+    "denmark": "dk",
+    "dominican republic": "do",
+    "ecuador": "ec",
+    "egypt": "eg",
+    "estonia": "ee",
+    "ethiopia": "et",
+    "finland": "fi",
+    "france": "fr",
+    "georgia": "ge",
+    "germany": "de",
+    "greece": "gr",
+    "hungary": "hu",
+    "iceland": "is",
+    "india": "in",
+    "indonesia": "id",
+    "iran": "ir",
+    "iraq": "iq",
+    "ireland": "ie",
+    "israel": "il",
+    "italy": "it",
+    "japan": "jp",
+    "jordan": "jo",
+    "kazakhstan": "kz",
+    "kenya": "ke",
+    "kuwait": "kw",
+    "kyrgyzstan": "kg",
+    "latvia": "lv",
+    "lebanon": "lb",
+    "libya": "ly",
+    "lithuania": "lt",
+    "luxembourg": "lu",
+    "madagascar": "mg",
+    "malaysia": "my",
+    "maldives": "mv",
+    "mali": "ml",
+    "malta": "mt",
+    "mexico": "mx",
+    "moldova": "md",
+    "monaco": "mc",
+    "mongolia": "mn",
+    "montenegro": "me",
+    "morocco": "ma",
+    "mozambique": "mz",
+    "myanmar": "mm",
+    "nepal": "np",
+    "netherlands": "nl",
+    "new zealand": "nz",
+    "nigeria": "ng",
+    "north korea": "kp",
+    "north macedonia": "mk",
+    "norway": "no",
+    "pakistan": "pk",
+    "palestine": "ps",
+    "panama": "pa",
+    "paraguay": "py",
+    "peru": "pe",
+    "philippines": "ph",
+    "poland": "pl",
+    "portugal": "pt",
+    "qatar": "qa",
+    "romania": "ro",
+    "russia": "ru",
+    "saudi arabia": "sa",
+    "senegal": "sn",
+    "serbia": "rs",
+    "singapore": "sg",
+    "slovakia": "sk",
+    "slovenia": "si",
+    "south africa": "za",
+    "south korea": "kr",
+    "spain": "es",
+    "sri lanka": "lk",
+    "sudan": "sd",
+    "sweden": "se",
+    "switzerland": "ch",
+    "syria": "sy",
+    "tajikistan": "tj",
+    "tanzania": "tz",
+    "thailand": "th",
+    "tunisia": "tn",
+    "turkey": "tr",
+    "turkmenistan": "tm",
+    "ukraine": "ua",
+    "united arab emirates": "ae",
+    "united kingdom": "gb",
+    "uk": "gb",       // alias
+    "britain": "gb", // alias
+    "england": "gb", // alias
+    "united states": "us",
+    "usa": "us",     // alias
+    "us": "us",      // alias
+    "uruguay": "uy",
+    "uzbekistan": "uz",
+    "venezuela": "ve",
+    "vietnam": "vn",
+    "yemen": "ye",
+    "zimbabwe": "zw"
   };
+
+  const code = mapping[input];
+  if (code) {
+    byId(targetId).src = `https://flagcdn.com/${code}.svg`;
+  } else {
+    byId(targetId).src = "";
+  }
+}
 
   const code = mapping[name];
   if (code) {
