--- a/index.html
+++ b/index.html
@@ -5,29 +5,143 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>ReflexiveLab — Lefebvre Simulator (A → B)</title>
   <style>
-    :root { --bg:#f8f8fb; --card:#ffffff; --text:#0f172a; --muted:#64748b; --line:#e5e7eb; --accent:#111827; }
-    * { box-sizing: border-box; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
-    body { margin:0; background:linear-gradient(#fafafa,#fff); color:var(--text); }
-    .wrap { max-width: 1100px; margin: 32px auto; padding: 0 16px; }
-    .row { display:grid; gap:16px; }
-    @media (min-width: 900px){ .row.cols-2{ grid-template-columns:1fr 1fr } .row.cols-3{ grid-template-columns:2fr 1fr 1fr } }
-    .card { background:var(--card); border:1px solid var(--line); border-radius:14px; padding:18px; box-shadow: 0 6px 20px rgba(0,0,0,0.04); }
-    h1 { margin:0 0 6px 0; font-weight:700; }
-    h2 { margin:0 0 10px 0; font-size:18px; }
-    label{ font-size:13px; color:var(--muted); display:block; margin-bottom:6px; }
-    input[type="text"], select { width:100%; padding:10px 12px; border:1px solid var(--line); border-radius:10px; }
-    .slider-row{ margin-bottom:10px; }
-    .slider-label{ display:flex; justify-content:space-between; font-size:13px; color:var(--muted); }
-    input[type="range"]{ width:100%; }
-    .btn { cursor:pointer; background:#111827; color:#fff; border:none; padding:10px 14px; border-radius:10px; }
-    .muted { color:var(--muted); font-size:13px; }
-    .bar { background:#eef2ff; height:14px; border-radius:999px; position:relative; overflow:hidden; }
-    .bar > i{ position:absolute; left:0; top:0; bottom:0; background:#111827; width:0%; transition:width .4s ease; }
-    .pill{ background:#f1f5f9; padding:6px 10px; border-radius:999px; font-size:12px; }
-    .list { display:grid; gap:8px; }
-    .rowline{ display:flex; align-items:center; justify-content:space-between; gap:12px; }
-    .note{ font-size:13px; color:#334155; line-height:1.4; }
-    .foot{ font-size:12px; color:#6b7280; }
+    :root {
+  --bg: #0a0a0a;         /* main background */
+  --card: #1a1a1a;       /* card panels */
+  --text: #f5f5f7;       /* Apple-style light text */
+  --muted: #9ca3af;      /* softer gray text */
+  --line: #2a2a2a;       /* thin borders */
+  --accent: #0071e3;     /* Apple blue accent */
+}
+
+* {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+body {
+  margin: 0;
+  background: var(--bg);
+  color: var(--text);
+}
+
+.wrap {
+  max-width: 1100px;
+  margin: 40px auto;
+  padding: 0 20px;
+}
+
+.row {
+  display: grid;
+  gap: 16px;
+}
+@media (min-width: 900px){
+  .row.cols-2{ grid-template-columns:1fr 1fr }
+  .row.cols-3{ grid-template-columns:2fr 1fr 1fr }
+}
+
+.card {
+  background: var(--card);
+  border: 1px solid var(--line);
+  border-radius: 18px;
+  padding: 20px;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.6);
+}
+
+h1 {
+  margin: 0 0 6px 0;
+  font-weight: 600;
+  font-size: 28px;
+}
+
+h2 {
+  margin: 0 0 12px 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--muted);
+}
+
+label {
+  font-size: 13px;
+  color: var(--muted);
+  display: block;
+  margin-bottom: 6px;
+}
+
+input[type="text"], select {
+  width: 100%;
+  padding: 10px 12px;
+  border: 1px solid var(--line);
+  border-radius: 12px;
+  background: #111;
+  color: var(--text);
+}
+
+.slider-row { margin-bottom: 14px; }
+.slider-label { display: flex; justify-content: space-between; font-size: 13px; color: var(--muted); }
+input[type="range"] { width: 100%; }
+
+.btn {
+  cursor: pointer;
+  background: var(--accent);
+  color: #fff;
+  border: none;
+  padding: 10px 16px;
+  border-radius: 12px;
+  font-weight: 500;
+  transition: background .2s ease;
+}
+.btn:hover {
+  background: #005bb5;
+}
+
+.muted { color: var(--muted); font-size: 13px; }
+
+.bar {
+  background: #2a2a2a;
+  height: 14px;
+  border-radius: 999px;
+  position: relative;
+  overflow: hidden;
+}
+.bar > i {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background: var(--accent);
+  width: 0%;
+  transition: width .4s ease;
+}
+
+.pill {
+  background: #2a2a2a;
+  padding: 6px 10px;
+  border-radius: 999px;
+  font-size: 12px;
+  color: var(--text);
+}
+
+.list { display: grid; gap: 8px; }
+
+.rowline {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.note {
+  font-size: 14px;
+  color: var(--text);
+  line-height: 1.5;
+}
+
+.foot {
+  font-size: 12px;
+  color: var(--muted);
+}
+
   </style>
 </head>
 <body>
