--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ input[type="range"] { width: 100%; }
   bottom: 0;
   background: var(--accent);
   width: 0%;
-  transition: width .4s ease;
+  transition: width 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pill {
