--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@ input[type="range"] { width: 100%; }
 .foot {
   font-size: 12px;
   color: var(--muted);
+  @keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.action-item {
+  opacity: 0;
+  animation: fadeInUp 0.6s ease forwards;
+}
 }
   </style>
 </head>
@@ -381,11 +396,14 @@ setTimeout(() => {
       byId("x2v").textContent = Math.round(res.layers.x2*100)+"%";
       byId("rfv").textContent = Math.round(res.layers.rf*100)+"%";
 
-      // actions
-      const list = [...res.actions].sort((a,b)=>b.p-a.p);
-      byId("actions").innerHTML = list.map(a=>(
-        `<div class="rowline"><span>${a.key}</span><span class="pill">${(a.p*100).toFixed(1)}%</span></div>`
-      )).join("");
+      // actions with fade-in stagger
+const list = [...res.actions].sort((a,b)=>b.p-a.p);
+byId("actions").innerHTML = list.map((a,i)=>(
+  `<div class="rowline action-item" style="animation-delay:${i*0.2}s">
+     <span>${a.key}</span>
+     <span class="pill">${(a.p*100).toFixed(1)}%</span>
+   </div>`
+)).join("");
 
       // note
       const domImpact = [
