--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ byId("actions").innerHTML = list.map((a,i)=>(
      <span>${a.key}</span>
      <span class="pill">${(a.p*100).toFixed(1)}%</span>
    </div>`
-)).join("");
+)).join("")
 
       // note
       const domImpact = [
