--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>ReflexiveLab — Lefebvre Simulator (A → B)</title>
   <style>
-    :root {
-  --bg: #0a0a0a;         /* main background */
-  --card: #1a1a1a;       /* card panels */
-  --text: #f5f5f7;       /* Apple-style light text */
-  --muted: #9ca3af;      /* softer gray text */
-  --line: #2a2a2a;       /* thin borders */
-  --accent: #0071e3;     /* Apple blue accent */
+:root {
+  --bg: #0a0a0a;
+  --card: #1a1a1a;
+  --text: #f5f5f7;
+  --muted: #9ca3af;
+  --line: #2a2a2a;
+  --accent: #0071e3;
 }
 
 * {
@@ -19,22 +19,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
-body {
-  margin: 0;
-  background: var(--bg);
-  color: var(--text);
-}
+body { margin: 0; background: var(--bg); color: var(--text); }
 
-.wrap {
-  max-width: 1100px;
-  margin: 40px auto;
-  padding: 0 20px;
-}
+.wrap { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
 
-.row {
-  display: grid;
-  gap: 16px;
-}
+.row { display: grid; gap: 16px; }
 @media (min-width: 900px){
   .row.cols-2{ grid-template-columns:1fr 1fr }
   .row.cols-3{ grid-template-columns:2fr 1fr 1fr }
@@ -48,33 +37,14 @@ body {
   box-shadow: 0 4px 16px rgba(0,0,0,0.6);
 }
 
-h1 {
-  margin: 0 0 6px 0;
-  font-weight: 600;
-  font-size: 28px;
-}
+h1 { margin: 0 0 6px 0; font-weight: 600; font-size: 28px; }
+h2 { margin: 0 0 12px 0; font-size: 18px; font-weight: 500; color: var(--muted); }
 
-h2 {
-  margin: 0 0 12px 0;
-  font-size: 18px;
-  font-weight: 500;
-  color: var(--muted);
-}
-
-label {
-  font-size: 13px;
-  color: var(--muted);
-  display: block;
-  margin-bottom: 6px;
-}
+label { font-size: 13px; color: var(--muted); display: block; margin-bottom: 6px; }
 
 input[type="text"], select {
-  width: 100%;
-  padding: 10px 12px;
-  border: 1px solid var(--line);
-  border-radius: 12px;
-  background: #111;
-  color: var(--text);
+  width: 100%; padding: 10px 12px; border: 1px solid var(--line);
+  border-radius: 12px; background: #111; color: var(--text);
 }
 
 .slider-row { margin-bottom: 14px; }
@@ -82,81 +52,42 @@ input[type="text"], select {
 input[type="range"] { width: 100%; }
 
 .btn {
-  cursor: pointer;
-  background: var(--accent);
-  color: #fff;
-  border: none;
-  padding: 10px 16px;
-  border-radius: 12px;
-  font-weight: 500;
-  transition: background .2s ease;
+  cursor: pointer; background: var(--accent); color: #fff; border: none;
+  padding: 10px 16px; border-radius: 12px; font-weight: 500; transition: background .2s ease;
 }
-.btn:hover {
-  background: #005bb5;
-}
+.btn:hover { background: #005bb5; }
 
 .muted { color: var(--muted); font-size: 13px; }
 
 .bar {
-  background: #2a2a2a;
-  height: 14px;
-  border-radius: 999px;
-  position: relative;
-  overflow: hidden;
+  background: #2a2a2a; height: 14px; border-radius: 999px; position: relative; overflow: hidden;
 }
 .bar > i {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background: var(--accent);
-  width: 0%;
-  transition: width 1s cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute; left: 0; top: 0; bottom: 0; background: var(--accent);
+  width: 0%; transition: width 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.pill {
-  background: #2a2a2a;
-  padding: 6px 10px;
-  border-radius: 999px;
-  font-size: 12px;
-  color: var(--text);
-}
+.pill { background: #2a2a2a; padding: 6px 10px; border-radius: 999px; font-size: 12px; color: var(--text); }
 
 .list { display: grid; gap: 8px; }
 
-.rowline {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 12px;
-}
+.rowline { display: flex; align-items: center; justify-content: space-between; gap: 12px; }
 
-.note {
-  font-size: 14px;
-  color: var(--text);
-  line-height: 1.5;
-}
+.note { font-size: 14px; color: var(--text); line-height: 1.5; }
 
-.foot {
-  font-size: 12px;
-  color: var(--muted);
-  @keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+.foot { font-size: 12px; color: var(--muted); }
 
+/* <-- these were accidentally inside .foot before */
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(10px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
 .action-item {
   opacity: 0;
   animation: fadeInUp 0.6s ease forwards;
 }
-}
-  </style>
+</style>
+
 </head>
 <body>
   <div class="wrap">
